# directory-indexer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cliff.toml  dev-requirements.in  pyproject.toml  user-manual.md
.github/workflows/: main.yml
src/: directory_index_generator.py  directory_indexer.py  exception_catcher.py  settings.py
