[project]
name = "directory-indexer"
version = "0.0"
description = "A Python program to create an index for a directory, listing all files and subfolders."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "tkinter",
    "openpyxl"
]

[build-system]
requires = ["wheel"]

[tool.ruff]
target-version = "py313"
line-length = 150

[tool.ruff.mccabe]
max-complexity = 15

[tool.ruff.isort]
force-single-line = true
force-sort-within-sections = true
combine-as-imports = true

[tool.ruff.pydocstyle]
convention = "google"
